css/style.css
*,
::before,
::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Karla", sans-serif;
  background-color: #e5eff5;
}

main {
  background-color: #fff;
  width: auto;
  height: 60%;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  box-shadow: 0 19px 38px rgba(151, 151, 151, 0.22),
    0 15px 12px rgba(151, 151, 151, 0.22);
}

.joinus {
  height: 40%;
  margin: 40px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.joinus > p {
  color: #98a6bd;
}

h1 {
  font-size: 23px;
  color: #2ab2af;
}

p {
  font-size: 16px;
  color: #e5eff5;
}

span.green {
  color: #c0df34;
  font-weight: 700;
}

.articles {
  display: flex;
  height: 60%;
}

article.box {
  width: 100%;
}

h2 {
  margin: 0 0 10px 0;
  font-size: 16px;
  color: #fff;
}

.subscription p.price {
  display: flex;
  align-items: center;
  gap: 10px;
  color: #fff;
  font-size: 30px;
  font-weight: 700;
}

.subscription p.price span {
  font-size: 14px;
  opacity: 0.5;
  font-weight: 100;
}

.subscription {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: #2bb3b1;
  padding: 40px;
  border-radius: 0 0 0 5px;
}

.subscription p {
  font-size: 14px;
  color: #e5eff5;
  margin-top: 5px;
}

button {
  margin-top: auto;
  background-color: #c0df34;
  color: white;
  font-weight: 700;
  outline: none;
  border: none;
  padding: 15px 0;
  border-radius: 5px;
  transition: background-color 0.3s;
  cursor: pointer;
}

button:hover {
  background-color: #a0ba2b;
}

.whyus {
  background-color: #4abebd;
  padding: 40px;
  border-radius: 0 0 5px 0;
}

.whyus p {
  font-size: 13px;
  opacity: 0.7;
  line-height: 20px;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 15px 0;
  background-color: #c0df34;
}

.attribution {
  color: #fff;
  text-decoration: none;
  margin: 0 auto;
  width: fit-content;
}

.attribution a {
  color: #6e811c;
  text-decoration: none;
  transition: color 0.3s;
}

.attribution a:hover {
  color: #a0ba2b;
}

/* Media Queries */

@media screen and (max-width: 610px) {
  body {
    display: block;
    height: auto;
  }

  button {
    margin-top: 20px;
  }

  main {
    height: auto;
    margin: 25px;
  }

  footer {
    position: relative;
  }

  .joinus {
    margin: 20px;
    height: 170px;
  }

  .articles {
    height: auto;
  }

  .whyus {
    border-radius: 0 0 5px 5px;
  }

  .subscription {
    border-radius: 0;
  }

  .subscription,
  .whyus {
    padding: 20px;
  }

  .articles {
    flex-direction: column;
  }
}

@media screen and (max-width: 376px) {
  .joinus {
    height: 210px;
  }

  .attribution {
    font-size: 12px;
  }
}

